Migrated to Java 17 and spring framework 6.