@@ -24,10 +24,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>17</source>
+                    <target>17</target>
+					<compilerArgs>
+						<arg>--add-exports</arg>
+						<arg>java.naming/com.sun.jndi.ldap=ALL-UNNAMED</arg>
+					</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
@@ -39,7 +43,7 @@
 				<dependency>
 					<groupId>org.slf4j</groupId>
 					<artifactId>slf4j-simple</artifactId>
-					<version>1.6.1</version>
+					<version>1.7.31</version>
 				</dependency>
 			</dependencies>
 			<build>
@@ -47,7 +51,7 @@
 					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
 						<artifactId>exec-maven-plugin</artifactId>
-						<version>1.2</version>
+						<version>1.5.0</version>
 						<executions>
 							<execution>
 								<phase>install</phase>
@@ -92,14 +96,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>commons-fileupload</groupId>
-			<artifactId>commons-fileupload</artifactId>
-			<version>1.4</version>
-		</dependency>
-		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>5.3.18</version>
+			<version>6.0.2</version>
 			<optional>true</optional>
 		</dependency>
 
@@ -113,7 +112,7 @@
 			<scope>test</scope>
 			<groupId>org.easymock</groupId>
 			<artifactId>easymockclassextension</artifactId>
-			<version>${easy-mock.version}</version>
+			<version>3.2</version>
 		</dependency>
 		<dependency>
 			<scope>test</scope>
@@ -144,7 +143,7 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-collections4</artifactId>
-			<version>4.3</version>
+			<version>4.4</version>
 		</dependency>
 
 		<dependency>
@@ -177,19 +176,19 @@
 			<artifactId>commons-lang</artifactId>
 			<groupId>commons-lang</groupId>
 			<type>jar</type>
-			<version>2.5</version>
+			<version>2.6</version>
 		</dependency>
 		<dependency>
 			<groupId>com.hazelcast</groupId>
 			<artifactId>hazelcast</artifactId>
-			<version>5.1</version>
+			<version>5.2.1</version>
 			<type>jar</type>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>com.googlecode.concurrentlinkedhashmap</groupId>
 			<artifactId>concurrentlinkedhashmap-lru</artifactId>
-			<version>1.3.2</version>
+			<version>1.4.2</version>
 			<type>jar</type>
 		</dependency>
 
@@ -203,25 +202,25 @@
 		<dependency>
 			<groupId>org.glassfish.grizzly</groupId>
 			<artifactId>grizzly-http-server</artifactId>
-			<version>2.4.0</version>
+			<version>4.0.0</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish.grizzly</groupId>
 			<artifactId>grizzly-http-servlet</artifactId>
-			<version>2.4.0</version>
+			<version>4.0.0</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish.grizzly</groupId>
 			<artifactId>tls-sni</artifactId>
-			<version>2.4.0</version>
+			<version>4.0.0</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish.grizzly</groupId>
 			<artifactId>grizzly-http-server-multipart</artifactId>
-			<version>2.4.0</version>
+			<version>4.0.0</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
